--- a/css/styles.scss
+++ b/css/styles.scss
@@ -27,12 +27,13 @@ div#contents{
   border: 1px solid #282523;
   display: inline-block;
   padding: 8px 8px 4px;
-  margin: 8px 0 18px;
+  margin: 12px 0 18px;
   p{
+    margin: 0;
     text-align: center;
   }
   ul{
-    margin: 8px 0;
+    margin: 4px 0 6px;
     padding-inline-start: 1.2em;
     li{
       margin: 2px 0;
@@ -59,6 +60,8 @@ table{
     }
     span.nowrap{
       display: inline-block;
+      font-family:'Courier New', Courier, monospace;
+      font-weight: bold;
     }
   }
 }
