--- a/css/styles.css
+++ b/css/styles.css
@@ -19,9 +19,16 @@ a {
   text-decoration: none;
 }
 
-h1, h2 {
+h1 {
   padding-top: 18px;
   margin: 0 0 12px;
+}
+
+code {
+  display: block;
+  font-size: 2em;
+  padding-top: 18px;
+  margin: 0 0 8px;
 }
 
 p.tac {
