--- a/css/styles.scss
+++ b/css/styles.scss
@@ -16,9 +16,15 @@ a{
   font-weight: bold;
   text-decoration: none;
 }
-h1,h2{
+h1{
   padding-top: 18px;
   margin: 0 0 12px;
+}
+code{
+  display: block;
+  font-size: 2em;
+  padding-top: 18px;
+  margin: 0 0 8px;
 }
 p.tac{
   text-align: center;
