--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,12 @@
+@charset "UTF-8";
 * {
+  font-family: YuGothic,'Yu Gothic','ＭＳ ゴシック','Hiragino Kaku Gothic ProN','ヒラギノ角ゴ ProN W3','Yu Mincho Light','YuMincho','Yu Mincho','游明朝体','ＭＳ 明朝', 'MS Mincho','ヒラギノ明朝 ProN','Hiragino Mincho ProN','Arial',sans-serif;
   margin: 0;
   border: none;
   padding: 0;
 }
 
 .inner {
-  font-family: 'Yu Gothic','Hiragino Kaku Gothic ProN','Yu Mincho Light','Hiragino Mincho ProN','Meiryo UI',Arial,sans-serif;
   max-width: 1366px;
   margin: 0 auto;
   overflow-x: hidden;
@@ -14,7 +15,6 @@
 
 a {
   color: #2c84cc;
-  font-family: 'Courier New', Courier, monospace;
   font-weight: bold;
   text-decoration: none;
 }
@@ -31,7 +31,7 @@ code {
   margin: 0 0 8px;
 }
 
-p.tac {
+.tac {
   text-align: center;
 }
 
@@ -82,7 +82,6 @@ table td.priority {
 
 table td span.nowrap {
   display: inline-block;
-  font-family: 'Courier New', Courier, monospace;
   font-weight: bold;
 }
 
@@ -100,21 +99,19 @@ p {
 
 div#updates {
   color: #a1a499;
-  font-size: 0.8em;
-  margin: 48px 0 4px;
+  font-size: 0.72em;
+  margin: 36px 0 4px;
 }
 
 div#updates p {
-  margin: 0;
+  margin: 0 0 4px;
 }
 
-div#updates ul {
-  margin: 4px;
-  padding-inline-start: 1.2em;
+div#updates table td {
+  border: 1px #ccc solid;
 }
 
-div#updates ul li {
-  font-family: 'Courier New', Courier, monospace;
+div#updates table td p {
   margin: 0;
 }
 
