--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,10 +1,10 @@
 *{
+  font-family: YuGothic,'Yu Gothic','ＭＳ ゴシック','Hiragino Kaku Gothic ProN','ヒラギノ角ゴ ProN W3','Yu Mincho Light','YuMincho','Yu Mincho','游明朝体','ＭＳ 明朝', 'MS Mincho','ヒラギノ明朝 ProN','Hiragino Mincho ProN','Arial',sans-serif;
   margin:0;
   border:none;
   padding:0;
 }
 .inner{
-  font-family: 'Yu Gothic','Hiragino Kaku Gothic ProN','Yu Mincho Light','Hiragino Mincho ProN','Meiryo UI',Arial,sans-serif;
   max-width:1366px;
   margin:0 auto;
   overflow-x:hidden;
@@ -12,7 +12,6 @@
 }
 a{
   color:#2c84cc;
-  font-family:'Courier New', Courier, monospace;
   font-weight: bold;
   text-decoration: none;
 }
@@ -26,7 +25,7 @@ code{
   padding-top: 18px;
   margin: 0 0 8px;
 }
-p.tac{
+.tac{
   text-align: center;
 }
 div#contents{
@@ -66,7 +65,6 @@ table{
     }
     span.nowrap{
       display: inline-block;
-      font-family:'Courier New', Courier, monospace;
       font-weight: bold;
     }
   }
@@ -82,17 +80,17 @@ p{
 }
 div#updates{
   color: #a1a499;
-  font-size: 0.8em;
-  margin: 48px 0 4px;
+  font-size: 0.72em;
+  margin: 36px 0 4px;
   p{
-    margin: 0;
+    margin: 0 0 4px;
   }
-  ul{
-    margin: 4px;
-    padding-inline-start: 1.2em;
-    li{
-      font-family: 'Courier New', Courier, monospace;
-      margin: 0;
+  table{
+    td{
+      border: 1px #ccc solid;
+      p{
+        margin: 0;
+      }
     }
   }
 }
