updated styles and added new song

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,13 +7,15 @@
 }
 
 .inner {
+  color: #282523;
   max-width: 1366px;
   margin: 0 auto;
   overflow-x: hidden;
   width: 96%;
 }
 
-a {
+a,
+a span {
   color: #2c84cc;
   font-weight: bold;
   text-decoration: none;
@@ -24,11 +26,14 @@ h1 {
   margin: 0 0 12px;
 }
 
-code {
-  display: block;
-  font-size: 2em;
+h2 {
   padding-top: 18px;
   margin: 0 0 8px;
+}
+
+h2 a {
+  color: #282523;
+  cursor: text;
 }
 
 .tac {
@@ -78,6 +83,14 @@ table td.separator {
 
 table td.priority {
   white-space: nowrap;
+}
+
+table td.small {
+  font-size: 0.96em;
+}
+
+table td.toosmall {
+  font-size: 0.72em;
 }
 
 table td span.nowrap {
