--- a/css/styles.scss
+++ b/css/styles.scss
@@ -5,12 +5,14 @@
   padding:0;
 }
 .inner{
+  color:#282523;
   max-width:1366px;
   margin:0 auto;
   overflow-x:hidden;
   width:96%;
 }
-a{
+a,
+a span{
   color:#2c84cc;
   font-weight: bold;
   text-decoration: none;
@@ -19,11 +21,13 @@ h1{
   padding-top: 18px;
   margin: 0 0 12px;
 }
-code{
-  display: block;
-  font-size: 2em;
+h2{
   padding-top: 18px;
   margin: 0 0 8px;
+  a{
+    color:#282523;
+    cursor: text;
+  }
 }
 .tac{
   text-align: center;
@@ -55,13 +59,18 @@ table{
       font-weight: bold;
       padding: 5px;
       text-align: center;
-      // font-size: 1.1em;
     }
     &.separator{
       text-align: center;
     }
     &.priority{
       white-space: nowrap;
+    }
+    &.small{
+      font-size: 0.96em;
+    }
+    &.toosmall{
+      font-size: 0.72em;
     }
     span.nowrap{
       display: inline-block;
