--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,10 @@ table td.smartphonePriority#noBorderTop {
   padding-top: 0;
 }
 
+table td.noBorder {
+  border: none;
+}
+
 table td span.nowrap {
   display: inline-block;
 }
@@ -141,7 +145,7 @@ div#updates table td {
 }
 
 div#updates table td.noBorder {
-  border: 0;
+  border: none;
 }
 
 div#updates table td.priorityCenter {
@@ -157,7 +161,7 @@ div#updates table td.priorityCenter {
 
 @media (orientation: landscape) {
   table td.small {
-    font-size: 0.84em;
+    font-size: 0.92em;
   }
   .smartphone,
   .butLandscape {
