--- a/css/styles.scss
+++ b/css/styles.scss
@@ -81,6 +81,9 @@ table{
         padding-top: 0;
       }
     }
+    &.noBorder{
+      border: none;
+    }
     span.nowrap{
       display: inline-block;
     }
@@ -112,7 +115,7 @@ div#updates{
     td{
       border: 1px #ccc solid;
       &.noBorder{
-        border: 0;
+        border: none;
       }
       &.priorityCenter{
         white-space: nowrap;
@@ -133,7 +136,7 @@ div#updates{
 @media(orientation:landscape){
   table td{
     &.small{
-      font-size: 0.84em;
+      font-size: 0.92em;
     }
   }
   .smartphone,
